maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:5: error: not found: value sortie
  sortie = findExit();
  ^ShortestPathMaze:21: error: not found: type Tuple
def marquerSol(casee:Tuple, numero:Int) {
                     ^ShortestPathMaze:6: error: not found: value sortie
  marquerSol(sortie, 0);
             ^ShortestPathMaze:7: error: not found: value parcourirPath
  parcourirPath();
  ^ShortestPathMaze:14: error: not found: type Tuple
def findExit() : Tuple = {
                 ^ShortestPathMaze:17: error: not found: value HasBaggle
      if(HasBaggle())
         ^ShortestPathMaze:28: error: not found: value setHeading
  setHeading(Direction.NORTH);
  ^ShortestPathMaze:34: error: not found: value setHeading
  setHeading(Direction.EAST);
  ^